tests/matrices/invalid/invalid_vector_array_too_long.mtx
%%MatrixMarket vector array real general
4
101
202
303
404
505
